Cleaned spanish translation of chapter 13

--- a/13-ContinuousRelationships.Rmd
+++ b/13-ContinuousRelationships.Rmd
@@ -43,21 +43,22 @@ NHANES_adult <-
 ```
 
 <!--## An example: Hate crimes and income inequality-->
-## Un ejemplo: Crímenes de odio y la inequidad de ingreso
+## Un ejemplo: Crímenes de odio y desigualdad de ingreso
 
 <!--In 2017, the web site Fivethirtyeight.com published a story titled [*Higher Rates Of Hate Crimes Are Tied To Income Inequality*](https://fivethirtyeight.com/features/higher-rates-of-hate-crimes-are-tied-to-income-inequality/) which discussed the relationship between the prevalence of hate crimes and income inequality in the wake of the 2016 Presidential election. The story reported an analysis of hate crime data from the FBI and the Southern Poverty Law Center, on the basis of which they report:-->
-En 2017, el sitio web Fivethirtyeight.com publicó una historia titulada [*Higher Rates Of Hate Crimes Are Tied To Income Inequality*](https://fivethirtyeight.com/features/higher-rates-of-hate-crimes-are-tied-to-income-inequality/) en la cual se discute la relación entre la prevalencia de los crímenes de odio y la inequidad de ingreso en el despertar de la elección presidencial de 2016. La historia reportó un análisis de datos del FBI acerca de crímenes de odio y de y del Centro de leyes Southern Poverty, sobre la base de lo que informan:  
+En 2017, el sitio web Fivethirtyeight.com publicó una historia titulada [*Higher Rates Of Hate Crimes Are Tied To Income Inequality*](https://fivethirtyeight.com/features/higher-rates-of-hate-crimes-are-tied-to-income-inequality/) en la cual se discute la relación entre la prevalencia de los crímenes de odio y la desigualdad de ingreso al inicio de la elección presidencial de 2016. La historia reportó un análisis de datos del FBI acerca de crímenes de odio y del Centro de leyes Southern Poverty, basados en esto informan:  
 
 <!-- > "we found that income inequality was the most significant determinant of population-adjusted hate crimes and hate incidents across the United States".   -->
 > "Descubrimos que la desigualdad de ingresos era el determinante más significativo de los delitos de odio e incidentes de odio ajustados a la población en los Estados Unidos". 
 
 <!--The data for this analysis are available as part the ``fivethirtyeight`` package for the R statistical software, which makes it easy for us to access them.  The analysis reported in the story focused on the relationship between income inequality (defined by a quantity called the *Gini index* --- see Appendix for more details) and the prevalence of hate crimes in each state.-->  
-Los datos de este análisis están disponibles como parte del ``fivethirtyeight``, un paquete para el software estadístico de R, el cual facilita nuestro acceso a él. El análisis reportado en la historia se focaliza en la relación entre la inequidad de ingreso (definida por una medida llamada *índice Gini* --- véase Apéndice para más detalles) y la prevalencia de crímenes de odio de cada estado. 
+Los datos de este análisis están disponibles como parte del ``fivethirtyeight``, un paquete para el software estadístico de R, el cual facilita nuestro acceso a él. El análisis reportado en la historia se focaliza en la relación entre la desigualdad de ingresos (definida por una medida llamada *índice Gini* --- véase Apéndice para más detalles) y la prevalencia de crímenes de odio de cada estado. 
 
 <!--## Is income inequality related to hate crimes?-->
-## ¿La inequidad de ingreso está relacionada a los crímenes de odio?
+## ¿La desigualdad de ingreso está relacionada con los crímenes de odio?
 
-```{r hateCrimeGini, fig.cap="Plot of rates of hate crimes vs. Gini index.",out.width='75%', echo=FALSE, fig.height=4, fig.width=4}
+<!-- fig.cap="Plot of rates of hate crimes vs. Gini index." -->
+```{r hateCrimeGini, fig.cap="Gráfica de tasas de crímenes de odio vs. Índice Gini.",out.width='75%', echo=FALSE, fig.height=4, fig.width=4}
 
 hateCrimes <- 
   hate_crimes %>%
@@ -79,28 +80,28 @@ ggplot(hateCrimes,aes(gini_index,avg_hatecrimes_per_100k_fbi,label=state_abb)) +
 
 <!--The relationship between income inequality and rates of hate crimes is shown in Figure \@ref(fig:hateCrimeGini).
 Looking at the data, it seems that there may be a positive relationship between the two variables.  How can we quantify that relationship?-->
-La relación entre la inequidad de ingreso y los índices de crímenes de odio es mostrada en la Figura \@ref(fig:hateCrimeGini).
+La relación entre la inequidad de ingreso y los índices de crímenes de odio se muestra en la Figura \@ref(fig:hateCrimeGini).
 Observando los datos, parece que puede haber una relación positiva entre ambas variables. ¿Cómo podemos cuantificar esa relación?
 
 <!--## Covariance and correlation {#covariance-and-correlation}-->
-## Covarianza y la correlación {#covariance-and-correlation}
+## Covarianza y correlación {#covariance-and-correlation}
 
 <!--One way to quantify the relationship between two variables is the *covariance*.  Remember that variance for a single variable is computed as the average squared difference between each data point and the mean:-->
-Una manera de cuantificar la relación entre dos variables es la *covarianza*. Recuerda que la varianza se calcula para una variable única como la diferencia cuadrática promedio entre cada punto de los datos y la media:
+Una manera de cuantificar la relación entre dos variables es la *covarianza*. Recuerda que la varianza para una sola variable se calcula como el promedio de las diferencias cuadráticas entre cada punto de los datos y la media:
 
 $$
 s^2 = \frac{\sum_{i=1}^n (x_i - \bar{x})^2}{N - 1}
 $$
 
 <!--This tells us how far each observation is from the mean, on average, in squared units.  Covariance tells us whether there is a relation between the deviations of two different variables across observations.  It is defined as:-->
-Esto nos indica qué tan lejana está cada observación de la media, en promedio, en unidades cuadradas. La covarianza nos indica si hay una relación entre las desviaciones de dos variables diferentes a lo largo de las observaciones. Esto es definido como: 
+Esto nos indica qué tan lejana está cada observación de la media, en promedio, en unidades cuadradas. La covarianza nos indica si hay una relación entre las desviaciones de dos variables diferentes a lo largo de las observaciones. Esto se define como: 
 
 $$
 covariance = \frac{\sum_{i=1}^n (x_i - \bar{x})(y_i - \bar{y})}{N - 1}
 $$
 
 <!--This value will be far from zero when individual data points deviate by similar amounts from their respective means; if they are deviant in the same direction then the covariance is positive, whereas if they are deviant in opposite directions the covariance is negative.  Let's look at a toy example first.  The data are shown in Table \@ref(tab:covTable), along with their individual deviations from the mean and their crossproducts.-->
-Este valor estará lejos de cero cuando los puntos individuales de los datos se desvíen en cantidades similares de sus respectivos medias; si se desvían en la misma dirección, la covarianza es positiva, mientras que si se desvían en direcciones opuestas, la covarianza es negativa. Veamos primero un ejemplo de juguete. Los datos se muestran en la Tabla \@ref(tab:covTable), junto con sus desviaciones individuales de la media y sus productos cruzados.
+Este valor estará lejos de cero cuando los puntos individuales de los datos se desvíen en cantidades similares de sus respectivas medias; si se desvían en la misma dirección, la covarianza es positiva, mientras que si se desvían en direcciones opuestas, la covarianza es negativa. Veamos primero un ejemplo de juguete. Los datos se muestran en la Tabla \@ref(tab:covTable), junto con sus desviaciones individuales de la media y sus productos cruzados (*crossproducts*).
 
 ```{r covTable, echo=FALSE}
 # create data for toy example of covariance
@@ -116,12 +117,14 @@ df <-
 covXY <- sum(df$crossproduct) / (nrow(df) - 1)
 corXY <- sum(df$crossproduct) / ((nrow(df) - 1) * sd(df$x) * sd(df$y))
 
-kable(df, caption='Data for toy example of covariance')
+# 'Data for toy example of covariance'
+kable(df, caption='Datos del ejemplo de juguete para covarianzas.')
 ```
 
 <!--The covariance is simply the mean of the crossproducts, which in this case is `r I(covXY)`. We don't usually use the covariance to describe relationships between variables, because it varies with the overall level of variance in the data.  Instead, we would usually use the *correlation coefficient* (often referred to as *Pearson's correlation* after the statistician Karl Pearson). The correlation is computed by scaling the covariance by the standard deviations of the two variables:-->
-La covarianza es simplemente la media de los productos cruzados, los cuales en este caso son `r I(covXY)`. Por lo general, no usamos la covarianza para describir relaciones entre variables, porque varía con el nivel general de varianza en los datos. En su lugar, usualmente usamos el *coeficiente de correlación* (a menudo referido como *correlación de Pearson* en honor al estadístico Karl Pearson). La correlación se calcula escalando la covarianza sobre las desviaciones estándar de las dos variables:
+La covarianza es simplemente la media de los productos cruzados (*crossproducts*), en este caso es `r I(covXY)`. Por lo general, no usamos la covarianza para describir relaciones entre variables, porque varía con el nivel general de varianza en los datos. En su lugar, usualmente usamos el *coeficiente de correlación* (a menudo referido como *correlación de Pearson* en honor al estadístico Karl Pearson). La correlación se calcula escalando la covarianza sobre las desviaciones estándar de las dos variables:
 
+<!-- PENDIENTE TRADUCIR -->
 $$
 r = \frac{covariance}{s_xs_y} = \frac{\sum_{i=1}^n (x_i - \bar{x})(y_i - \bar{y})}{(N - 1)s_x s_y}
 $$
@@ -158,7 +161,7 @@ cor.test(
 ```
 
 <!--This test shows that the likelihood of an r value this extreme or more is quite low under the null hypothesis, so we would reject the null hypothesis of $r=0$.  Note that this test assumes that both variables are normally distributed.-->
-Este test nos muestra que la probabilidad de un valor r así o más extremo es realmente baja bajo la hipótesis nula, así que rechazaríamos la hipótesis nula de $r=0$. Nota que este test asume que ambas variables están normalmente distribuidas. 
+Esta prueba nos muestra que la probabilidad de un valor r así o más extremo es realmente baja bajo la hipótesis nula, así que rechazaríamos la hipótesis nula de $r=0$. Nota que este test asume que ambas variables están normalmente distribuidas. 
 
 <!--We could also test this by randomization, in which we repeatedly shuffle the values of one of the variables and compute the correlation, and then compare our observed correlation value to this null distribution to determine how likely our observed value would be under the null hypothesis. The results are shown in Figure \@ref(fig:shuffleCorr).  The p-value computed using randomization is reasonably similar to the answer given by the t-test.-->
 También podríamos probar esto por aleatorización, en la que mezclamos (reordenamos) los valores de una de las variables y calculamos la correlación, repetidamente, luego comparamos el valor observado de nuestra correlación con esta distribución nula para determinar qué tan probable sería nuestro valor observado bajo la hipótesis nula. Los resultados se muestran en la Figura \@ref(fig:shuffleCorr). El valor p calculado usando la aleatorización es razonablemente similar a la respuesta dada por la prueba t.
@@ -180,7 +183,8 @@ shuffleDist <-
   )
 ```
 
-```{r shuffleCorr,echo=FALSE,fig.cap="Histogram of correlation values under the null hypothesis, obtained by shuffling values. Observed value is denoted by blue line.",fig.width=4,fig.height=4,out.height='50%'}
+<!-- fig.cap="Histogram of correlation values under the null hypothesis, obtained by shuffling values. Observed value is denoted by blue line." -->
+```{r shuffleCorr,echo=FALSE,fig.cap="Histograma de los valores de correlación bajo la hipótesis nula, obtenidos al mezclar los valores. El valor observado está marcado por la línea azul.",fig.width=4,fig.height=4,out.height='50%'}
 
 ggplot(data.frame(shuffleDist),aes(shuffleDist)) + 
   geom_histogram(bins=100) +
@@ -195,15 +199,16 @@ ggplot(data.frame(shuffleDist),aes(shuffleDist)) +
 ```
 
 <!--We could also use Bayesian inference to estimate the correlation; see the Appendix for more on this.-->
-También podríamos usar inferencia Bayesiana para estimar la correlación; véase Apéndice para más sobre esto. 
+También podríamos usar inferencia Bayesiana para estimar la correlación; véase el Apéndice para más sobre esto. 
 
 <!--### Robust correlations {#robust-correlations}-->
-### Correlaciones Robustas {#robust-correlations}
+### Correlaciones robustas {#robust-correlations}
 
 <!--You may have noticed something a bit odd in Figure \@ref(fig:hateCrimeGini) -- one of the datapoints (the one for the District of Columbia) seemed to be quite separate from the others.  We refer to this as an *outlier*, and the standard correlation coefficient is very sensitive to outliers.  For example, in Figure \@ref(fig:outlierCorr) we can see how a single outlying data point can cause a very high positive correlation value, even when the actual relationship between the other data points is perfectly negative.-->
-Podrás haber notado algo un poco extraño en la Figura \@ref(fig:hateCrimeGini) -- uno de los puntos de datos (el del Distrito de Columbia) parece estar un tanto separado de los otros. Nos referimos a esto como un *valor atípico* o outlier, y el coeficiente de correlación estándar es muy sensible a valores atípicos. Por ejemplo, en la figura \@ref(fig:outlierCorr) podemos ver cómo un solo punto de datos periférico puede causar un valor de correlación positivo muy alto, incluso cuando la relación real entre los otros puntos de datos es perfectamente negativa.
+Podrás haber notado algo un poco extraño en la Figura \@ref(fig:hateCrimeGini) -- uno de los puntos de los datos (el del Distrito de Columbia) parece estar un tanto separado de los otros. Nos referimos a esto como un *valor atípico* o *outlier*, y el coeficiente de correlación estándar es muy sensible a valores atípicos. Por ejemplo, en la figura \@ref(fig:outlierCorr) podemos ver cómo un solo punto de datos periférico puede causar un valor de correlación positivo muy alto, incluso cuando la relación real entre los otros puntos de datos es perfectamente negativa.
 
-```{r outlierCorr, echo=FALSE,fig.cap="A simulated example of the effects of outliers on correlation.  Without the outlier the remainder of the datapoints have a perfect negative correlation, but the single outlier changes the correlation value to highly positive.",fig.width=4,fig.height=4,out.height='50%'}
+<!-- fig.cap="A simulated example of the effects of outliers on correlation.  Without the outlier the remainder of the datapoints have a perfect negative correlation, but the single outlier changes the correlation value to highly positive." -->
+```{r outlierCorr, echo=FALSE,fig.cap="Un ejemplo simulado de los efectos de los valores atípicos o outliers sobre la correlación.  Sin el outlier, el resto de los datos tienen una correlación negativa perfecta, pero ese solo valor atípico cambia el valor de la correlación a uno positivo alto.",fig.width=4,fig.height=4,out.height='50%'}
 n <- 10
 set.seed(1234)
 
@@ -231,7 +236,7 @@ print(p)
 ```
 
 <!--One way to address outliers is to compute the correlation on the ranks of the data after ordering them, rather than on the data themselves; this is known as the *Spearman correlation*.  Whereas the Pearson correlation for the example in Figure \@ref(fig:outlierCorr) was `r I(cc)`, the Spearman correlation is `r I(ccSpearman)`, showing that the rank correlation reduces the effect of the outlier and reflects the negative relationship between the majority of the data points.-->
-Una manera de abordar valores atípicos es calcular la correlación sobre los rangos de los datos después de ordenarlos, en lugar de sobre los datos mismos; esto es conocido como la *correlación de Spearman*. Mientras que la correlación de Pearson en el ejemplo de la Figura \@ref(fig:outlierCorr) era `r I(cc)`, la correlación de Spearman es `r I(ccSpearman)` mostrando que la correlación de rangos reduce el efecto del valor atípico y refleja la relación negativa entre la mayoría de los puntos de datos.
+Una manera de abordar los valores atípicos es calcular la correlación sobre los rangos (*ranks*) de los datos después de ordenarlos, en lugar de sobre los datos mismos; esto es conocido como la *correlación de Spearman*. Mientras que la correlación de Pearson en el ejemplo de la Figura \@ref(fig:outlierCorr) era `r I(cc)`, la correlación de Spearman es `r I(ccSpearman)` mostrando que la correlación de rangos (*rank correlation*) reduce el efecto del valor atípico y refleja la relación negativa entre la mayoría de los puntos de datos.
 
 <!--We can compute the rank correlation on the hate crime data as well:-->
 Podemos calcular la correlación de rangos de los datos de crímenes de odio también:
@@ -253,21 +258,24 @@ Ahora podemos ver que la correlación ya no es significativa (y en efecto es muy
 Cuando decimos que una cosa *causa* otra, ¿a qué nos referimos? Hay una larga historia en filosofía de la discusión acerca del significado de la causalidad, pero en estadística una manera más común de pensar en la causalidad es en términos de control experimental. Eso es, si pensamos que el factor X causa el factor Y, entonces si manipulamos el valor de X afectará el valor de Y. 
 
 <!--In medicine, there is a set of ideas known as [*Koch's postulates*](https://en.wikipedia.org/wiki/Koch%27s_postulates) which have historically been used to determine whether a particular organism causes a disease.   The basic idea is that the organism should be present in people with the disease, and not present in those without it -- thus, a treatment that eliminates the organism should also eliminate the disease.  Further, infecting someone with the organism should cause them to contract the disease.  An example of this was seen in the work of Dr. Barry Marshall, who had a hypothesis that stomach ulcers were caused by a bacterium (*Helicobacter pylori*).  To demonstrate this, he infected himself with the bacterium, and soon thereafter developed severe inflammation in his stomach.  He then treated himself with an antibiotic, and his stomach soon recovered.  He later won the Nobel Prize in Medicine for this work.-->
-En medicina, hay un conjunto de ideas conocidas como [*Koch's postulates*](https://en.wikipedia.org/wiki/Koch%27s_postulates) que históricamente se han utilizado para determinar si un organismo en particular causa una enfermedad. La idea básica es que el organismo debe estar presente en las personas con la enfermedad y no en las que no la padecen; por lo tanto, un tratamiento que elimine el organismo también debe eliminar la enfermedad. Además, infectar a alguien con el organismo debería hacer que contraiga la enfermedad. Un ejemplo de esto se vio en el trabajo del Dr. Barry Marshall, quien tenía la hipótesis de que las úlceras de estómago eran causadas por una bacteria (*Helicobacter pylori*). Para demostrar esto, se infectó con la bacteria y poco después desarrolló una inflamación severa en su estómago. Luego se trató a sí mismo con un antibiótico y su estómago pronto se recuperó. Más tarde ganó el Premio Nobel de Medicina por este trabajo.
+En medicina, hay un conjunto de ideas conocidas como los [*postulados de Koch* (*Koch's postulates*)](https://en.wikipedia.org/wiki/Koch%27s_postulates) que históricamente se han utilizado para determinar si un organismo en particular causa una enfermedad. La idea básica es que el organismo debe estar presente en las personas con la enfermedad y no en las que no la padecen; por lo tanto, un tratamiento que elimine el organismo también debe eliminar la enfermedad. Además, infectar a alguien con el organismo debería hacer que contraiga la enfermedad. Un ejemplo de esto se vio en el trabajo del Dr. Barry Marshall, quien tenía la hipótesis de que las úlceras de estómago eran causadas por una bacteria (*Helicobacter pylori*). Para demostrar esto, se infectó con la bacteria y poco después desarrolló una inflamación severa en su estómago. Luego se trató a sí mismo con un antibiótico y su estómago pronto se recuperó. Más tarde ganó el Premio Nobel de Medicina por este trabajo.
 
 <!--Often we would like to test causal hypotheses but we can't actually do an experiment, either because it's impossible ("What is the relationship between human carbon emissions and the earth's climate?") or unethical ("What are the effects of severe abuse on child brain development?"). However, we can still collect data that might be relevant to those questions.  For example, we can potentially collect data from children who have been abused as well as those who have not, and we can then ask whether their brain development differs.-->
 A menudo nos gustaría probar hipótesis causales, pero en realidad no podemos hacer un experimento, ya sea porque es imposible ("¿Cuál es la relación entre las emisiones de carbono humano y el clima de la Tierra?") o porque no es ético ("¿Cuáles son los efectos del abuso severo sobre el desarrollo del cerebro infantil?"). Sin embargo, aún podemos recopilar datos que podrían ser relevantes para esas preguntas. Por ejemplo, potencialmente podemos recopilar datos de niños que han sido abusados y de aquellos que no, y luego podemos preguntarnos si su desarrollo cerebral es diferente.
 
 <!--Let's say that we did such an analysis, and we found that abused children had poorer brain development than non-abused children. Would this demonstrate that abuse *causes* poorer brain development?  No.  Whenever we observe a statistical association between two variables, it is certainly possible that one of those two variables causes the other.  However, it is also possible that both of the variables are being influenced by a third variable; in this example, it could be that child abuse is associated with family stress, which could also cause poorer brain development through less intellectual engagement, food stress, or many other possible avenues.  The point is that a correlation between two variables generally tells us that something is *probably* causing somethign else, but it doesn't tell us what is causing what.-->
-Digamos que hicimos tal análisis y encontramos que los niños abusados tenían un desarrollo cerebral más pobre que los niños no abusados. ¿Demostraría esto que el abuso *causa* un peor desarrollo cerebral? No. Siempre que observemos una asociación estadística entre dos variables, es ciertamente posible que una de esas dos variables cause la otra. Sin embargo, también es posible que ambas variables estén influenciadas por una tercera variable; en este ejemplo, podría ser que el abuso infantil esté asociado con el estrés familiar, que también podría causar un desarrollo cerebral más deficiente debido a una menor participación intelectual, estrés alimentario o muchas otras posibles vías. El punto es que una correlación entre dos variables generalmente nos dice que algo *probablemente* está causando otra cosa, pero no nos dice qué está causando qué.
+Digamos que hicimos tal análisis y encontramos que los niños abusados tenían un desarrollo cerebral más pobre que los niños no abusados. ¿Demostraría esto que el abuso *causa* un peor desarrollo cerebral? No. Siempre que observemos una asociación estadística entre dos variables, es ciertamente posible que una de esas dos variables cause la otra. Sin embargo, también es posible que ambas variables estén influenciadas por una tercera variable; en este ejemplo, podría ser que el abuso infantil esté asociado con el estrés familiar, que también podría causar un desarrollo cerebral más deficiente debido a una menor interacción intelectual, estrés alimentario o muchas otras posibles vías. El punto es que una correlación entre dos variables generalmente nos dice que algo *probablemente* está causando otra cosa, pero no nos dice qué está causando qué.
 
 <!--### Causal graphs-->
 ### Gráficas causales
 
 <!--One useful way to describe causal relations between variables is through a *causal graph*, which shows variables as circles and causal relations between them as arrows.  For example, Figure \@ref(fig:simpleCausalGraph) shows the causal relationships between study time and two variables that we think should be affected by it: exam grades and exam finishing times.-->  
-Una forma útil de describir las relaciones causales entre variables es mediante un *gráfico causal*, que muestra las variables como círculos y las relaciones causales entre ellas como flechas. Por ejemplo, la Figura \@ref(fig:simpleCausalGraph) muestra las relaciones causales entre el tiempo de estudio y dos variables que creemos que deberían verse afectadas por él: las calificaciones del examen y los tiempos de finalización del examen.
+Una forma útil de describir las relaciones causales entre variables es mediante un *gráfico causal* (*causal graph*), que muestra las variables como círculos y las relaciones causales entre ellas como flechas. Por ejemplo, la Figura \@ref(fig:simpleCausalGraph) muestra las relaciones causales entre el tiempo de estudio y dos variables que creemos que deberían verse afectadas por él: las calificaciones del examen y los tiempos de finalización del examen.
 
-```{r mkCausalGraphs, echo=FALSE,message=FALSE,warning=FALSE,fig.cap="A graph showing causal relationships between three variables: study time, exam grades, and exam finishing time.  A green arrow represents a positive relationship (i.e. more study time causes exam grades to increase), and a red arrow represents a negative relationship (i.e. more study time causes faster completion of the exam).",fig.width=6,fig.height=6,out.height='50%'}
+<!-- fig.cap="A graph showing causal relationships between three variables: study time, exam grades, and exam finishing time.  A green arrow represents a positive relationship (i.e. more study time causes exam grades to increase), and a red arrow represents a negative relationship (i.e. more study time causes faster completion of the exam)." -->
+```{r mkCausalGraphs, echo=FALSE,message=FALSE,warning=FALSE,fig.cap="Una gráfica mostrando las relaciones causales entre tres variables: tiempo de estudio, calificaciones de exámenes, y tiempos de finalización de exámenes.  Una flecha verde representa una relación positiva (esto es, más tiempo de estudio causa mayor calificación en exámenes), y una flecha roja representa una relación negativa (esto es, más tiempo de estudio causa menor tiempo para finalizar un examen).",fig.width=6,fig.height=6,out.height='50%'}
+
+# PENDIENTE TRADUCIR 
 
 graph = "
 digraph boxes_and_circles {
@@ -305,7 +313,13 @@ digraph boxes_and_circles {
         fixedsize = true,
         width = 0.9,
         fontsize=6] // sets as circles
-  StudyTime; ExamGrade; FinishTime; Knowledge
+  StudyTime; ExamGrade; FinishTime
+
+  node [shape = box,
+        fixedsize = true,
+        width = 0.9,
+        fontsize=6] //  
+  Knowledge
 
   # several 'edge' statements
   StudyTime->Knowledge [color=green]
@@ -322,13 +336,15 @@ foo <- html_print(add_mathjax(grViz(latent_graph))) %>%
 <!--However, in reality the effects on finishing time and grades are not due directly to the amount of time spent studying, but rather to the amount of knowledge that the student gains by studying.  We would usually say that knowledge is a *latent* variable -- that is, we can't measure it directly but we can see it reflected in variables that we can measure (like grades and finishing times).  Figure \@ref(fig:latentCausalGraph) shows this.-->
 Sin embargo, en realidad, los efectos sobre el tiempo de finalización y las calificaciones no se deben directamente a la cantidad de tiempo dedicado al estudio, sino más bien a la cantidad de conocimientos que adquiere el alumno al estudiar. Por lo general, diríamos que el conocimiento es una variable *latente*, es decir, no podemos medirlo directamente, pero podemos verlo reflejado en variables que podemos medir (como calificaciones y tiempos de finalización). La Figura \@ref(fig:latentCausalGraph) muestra esto.
 
-```{r simpleCausalGraph, echo=FALSE,fig.cap="A graph showing causal relationships between three variables: study time, exam grades, and exam finishing time.  A green arrow represents a positive relationship (i.e. more study time causes exam grades to increase), and a red arrow represents a negative relationship (i.e. more study time causes faster completion of the exam).",fig.width=6,out.height='50%'}
+<!-- fig.cap="A graph showing causal relationships between three variables: study time, exam grades, and exam finishing time.  A green arrow represents a positive relationship (i.e. more study time causes exam grades to increase), and a red arrow represents a negative relationship (i.e. more study time causes faster completion of the exam)." -->
+```{r simpleCausalGraph, echo=FALSE,fig.cap="Una gráfica mostrando las relaciones causales entre tres variables: tiempo de estudio, calificaciones de exámenes, y tiempos de finalización de exámenes.  Una flecha verde representa una relación positiva (esto es, más tiempo de estudio causa mayor calificación en exámenes), y una flecha roja representa una relación negativa (esto es, más tiempo de estudio causa menor tiempo para finalizar un examen).",fig.width=6,out.height='50%'}
 
 knitr::include_graphics("images/dag_example.png")
 
 ```
 
-```{r latentCausalGraph, echo=FALSE,fig.cap="A graph showing the same causal relationships as above, but now also showing the latent variable (knowledge) using a square box.",fig.width=6,out.height='50%'}
+<!-- fig.cap="A graph showing the same causal relationships as above, but now also showing the latent variable (knowledge) using a square box." -->
+```{r latentCausalGraph, echo=FALSE,fig.cap="Una gráfica mostrando las mismas relaciones causales que antes, pero ahora también mostrando la variable latente (conocimiento) en un cuadro.",fig.width=6,out.height='50%'}
 
 knitr::include_graphics("images/dag_latent_example.png")
 
@@ -341,7 +357,7 @@ Aquí diríamos que el conocimiento *media* la relación entre el tiempo de estu
 Nota que si simplemente midiéramos las calificaciones de los exámenes y los tiempos de finalización, generalmente veríamos una relación negativa entre ellos, porque las personas que terminan los exámenes más rápido obtienen las calificaciones más altas. Sin embargo, si interpretáramos esta correlación como una relación causal, esto nos diría que para obtener mejores calificaciones, ¡deberíamos terminar el examen más rápido! Este ejemplo muestra lo engañosa que puede ser la inferencia de causalidad a partir de datos no experimentales.
 
 <!--Within statistics and machine learning, there is a very active research community that is currently studying the question of when and how we can infer causal relationships from non-experimental data.  However, these methods often require strong assumptions, and must generally be used with great caution.-->
-En las áreas de la estadística y del aprendizaje automático (*machine learning*), existe una comunidad de investigación muy activa que actualmente está estudiando la cuestión de cuándo y cómo podemos inferir relaciones causales a partir de datos no experimentales. Sin embargo, estos métodos a menudo requieren suposiciones sólidas y, en general, deben usarse con gran precaución.
+En las áreas de la estadística y del aprendizaje automático (*machine learning*), existe una comunidad de investigación muy activa que actualmente está estudiando la cuestión de cuándo y cómo podemos inferir relaciones causales a partir de datos no experimentales. Sin embargo, estos métodos a menudo requieren suposiciones fuertes y, en general, deben usarse con gran precaución.
 
 <!--## Learning objectives-->
 ## Objetivos de aprendizaje
@@ -367,10 +383,10 @@ Después de leer este capítulo tú deberás ser capaz de:
 ## Apéndice:
 
 <!--### Quantifying inequality: The Gini index-->
-### Cuantificando la inequidad: El índice Gini
+### Cuantificando la desigualdad: El índice Gini
 
 <!--Before we look at the analysis reported in the story, it's first useful to understand how the Gini index is used  to quantify inequality. The Gini index is usually defined in terms of a curve that describes the relation between income and the proportion of the population that has income at or less than that level, known as a *Lorenz curve*.  However, another way to think of it is more intuitive: It is the relative mean absolute difference between incomes, divided by two (from https://en.wikipedia.org/wiki/Gini_coefficient):-->
-Antes de mirar el análisis reportado en la historia, primero es útil entender cómo se usa el índice de Gini para cuantificar la desigualdad. El índice de Gini generalmente se define en términos de una curva que describe la relación entre los ingresos y la proporción de la población que tiene ingresos en ese nivel o menos, conocida como *curva de Lorenz*. Sin embargo, otra forma de pensar es más intuitiva: es la diferencia absoluta media relativa (*relative mean absolute difference*) entre ingresos, dividida entre dos (de https://en.wikipedia.org/wiki/Gini_coefficient):
+Antes de que miremos el análisis reportado en la historia, primero es útil entender cómo se usa el índice de Gini para cuantificar la desigualdad. El índice de Gini generalmente se define en términos de una curva que describe la relación entre los ingresos y la proporción de la población que tiene ingresos en ese nivel o menos, conocida como *curva de Lorenz*. Sin embargo, otra forma de pensarlo es más intuitiva: es la diferencia absoluta media relativa (*relative mean absolute difference*) entre ingresos, dividida entre dos (de https://en.wikipedia.org/wiki/Gini_coefficient):
 
 $$
 G = \frac{\displaystyle{\sum_{i=1}^n \sum_{j=1}^n \left| x_i - x_j \right|}}{\displaystyle{2n\sum_{i=1}^n x_i}} 
@@ -398,7 +414,8 @@ lorenzCurve = function(df){
 ```
 
 
-```{r gini0,echo=FALSE,fig.cap="Lorenz curves for A) perfect equality, B) normally distributed income, and C) high inequality (equal income except for one very wealthy individual).",fig.width=8,fig.height=8,out.width='80%'}
+<!.. fig.cap="Lorenz curves for A) perfect equality, B) normally distributed income, and C) high inequality (equal income except for one very wealthy individual)." -->
+```{r gini0,echo=FALSE,fig.cap="Curvas de Lorenz para A) igualdad perfecta, B) ingreso distribuido normalmente, y C) alta desigualdad (ingreso igual a excepción de una sola persona con muy altos ingresos).",fig.width=8,fig.height=8,out.width='80%'}
 
 incomeDf <- data.frame(income=rep(40000,10))
 lc <- lorenzCurve(incomeDf)
@@ -461,5 +478,5 @@ print(bayesCorPosterior)
 ```
 
 <!--Notice that the correlation estimated using the Bayesian method (`r I(bayesCorPosterior$Median)`) is slightly smaller than the one estimated using the standard correlation coefficient (`r I(corGiniHC)`), which is due to the fact that the estimate is based on a combination of the evidence and the prior, which effectively shrinks the estimate toward zero. However, notice that the Bayesian analysis is not robust to the outlier, and it still says that there is fairly strong evidence that the correlation is greater than zero (with a Bayes factor of more than 20).-->
-Nótese que la correlación estimada usando el método bayesiano (`r I(bayesCorPosterior$Median)`) es ligeramente menor que la estimada usando el coeficiente de correlación estándar (`r I(corGiniHC)`), lo cual se debe al hecho de que la estimación se basa en una combinación de la evidencia y la probabilidad previa, lo que efectivamente reduce la estimación hacia cero. Sin embargo, observe que el análisis bayesiano no es robusto para el valor atípico, y todavía dice que hay evidencia bastante fuerte de que la correlación es mayor que cero (con un factor de Bayes mayor a 20).
+Nótese que la correlación estimada usando el método bayesiano (`r I(bayesCorPosterior$Median)`) es ligeramente menor que la estimada usando el coeficiente de correlación estándar (`r I(corGiniHC)`), lo cual se debe al hecho de que la estimación se basa en una combinación de la evidencia y de la probabilidad previa, lo que efectivamente reduce la estimación hacia cero. Sin embargo, observe que el análisis bayesiano no es robusto para el valor atípico, y todavía dice que hay evidencia bastante fuerte de que la correlación es mayor que cero (con un factor de Bayes mayor a 20).
 
